--- a/SpanishAcademy/SpanishAcademy.csproj
+++ b/SpanishAcademy/SpanishAcademy.csproj
@@ -243,6 +243,10 @@
     <Content Include="Content\img\ChildrenClass\ChildrenClassC.jpg" />
     <Content Include="Content\img\CompanyClass\CompanyClass.jpg" />
     <Content Include="Content\img\ContactPage\ContactPage.jpg" />
+    <Content Include="Content\img\Events\DELE.jpg" />
+    <Content Include="Content\img\Events\IGCSE.jpg" />
+    <Content Include="Content\img\Events\TestYourSkills.jpg" />
+    <Content Include="Content\img\Events\vIDEOS.png" />
     <Content Include="Content\img\ExamClass\ExamClass.jpg" />
     <Content Include="Content\img\GroupClass\GroupClassA.jpg" />
     <Content Include="Content\img\GroupClass\GroupClassB.jpg" />
